--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/index.css">
+  <link rel="icon" href="./assets/pictures/conversation.png">
   <title>Forum Diskusi</title>
 </head>
 <body>
